[package]
name = "graphql-song"
version = "0.1.0"
authors = ["Dani Pous <dani.pous@gmail.com>"]
description = ""
license = ""
documentation = ""
repository = ""
edition = "2018"

[dependencies]
serde_json = "1.0.*"
url = "2.1.*"
juniper = { git = "https://github.com/graphql-rust/juniper#91a33539", branch = "master", features = ["serde_json"] }
juniper_hyper = { git = "https://github.com/graphql-rust/juniper#91a33539", branch = "master" }
juniper_codegen = { git = "https://github.com/graphql-rust/juniper#91a33539" }
tokio = { version = "0.2.*", features = [ "full" ] }
hyper = "0.13.*"
futures = { version = "0.3.*" }
pretty_env_logger = "0.4.*"
reqwest = "0.10.*"
elasticsearch = "7.7.0-alpha.1"
